# mosesdecoder

./: .gitignore  BUILD-INSTRUCTIONS-CMake.txt  CMakeLists.txt
OnDiskPt/: CMakeLists.txt  Main.cpp  Word.h
contrib/other-builds/OnDiskPt.xcodeproj/: project.pbxproj
cruise-control/: config.ems
lm/: CMakeLists.txt  model_test.cc  search_hashed.cc  search_hashed.hh  search_trie.hh
mert/: BleuScorer.cpp  CMakeLists.txt  Fdstream.h  Optimizer.cpp  Point.cpp  PreProcessFilter.cpp  SemposOverlapping.cpp  TerScorer.cpp  Timer.cpp  evaluator.cpp  extractor.cpp  mert.cpp  test_scorer.cpp
mert/TER/: tercalc.cpp
mert/TERsrc/: hashMapInfos.cpp  hashMapStringInfos.cpp
moses/: AlignmentInfo.h  BleuScoreFeature.cpp  CMakeLists.txt  ChartHypothesis.cpp  ChartHypothesis.h  ConfusionNet.cpp  DecodeGraph.h  FactorCollection.h  LexicalReorderingTable.cpp  PDTAimp.h  PhraseBoundaryFeature.h  StaticData.cpp  StaticData.h  TargetBigramFeature.h  TargetNgramFeature.h  ThreadPool.h  Util.h  Word.h
moses-chart-cmd/: CMakeLists.txt
moses-chart-cmd/src/: CMakeLists.txt
moses-cmd/: CMakeLists.txt  Main.cpp
moses-cmd/src/: CMakeLists.txt
moses/LM/: IRST.cpp  Remote.cpp  Remote.h
moses/TranslationModel/: BilingualDynSuffixArray.cpp
moses/TranslationModel/CYKPlusParser/: DotChartInMemory.h
moses/TranslationModel/CompactPT/: BlockHashIndex.cpp  BlockHashIndex.h  LexicalReorderingTableCompact.h  LexicalReorderingTableCreator.cpp  LexicalReorderingTableCreator.h  ListCoders.h  MmapAllocator.h  MurmurHash3.cpp  MurmurHash3.h  PhraseDictionaryCompact.h  PhraseTableCreator.cpp  PhraseTableCreator.h  StringVector.h
moses/TranslationModel/DynSAInclude/: FileHandler.cpp  fdstream.h  types.h
moses/TranslationModel/RuleTable/: LoaderStandard.cpp  PhraseDictionaryFuzzyMatch.cpp  PhraseDictionaryFuzzyMatch.h  PhraseDictionaryNodeSCFG.h  PhraseDictionaryOnDisk.h  PhraseDictionarySCFG.h  Trie.h  UTrie.h  UTrieNode.h
moses/TranslationModel/fuzzy-match/: FuzzyMatchWrapper.cpp
moses/src/: BilingualDynSuffixArray.cpp  CMakeLists.txt  FactorCollection.h  StaticData.cpp  StaticData.h  ThreadPool.h
moses/src/DynSAInclude/: file.cpp  types.h
moses/src/LM/: Remote.cpp  Remote.h
phrase-extract/: CMakeLists.txt  ExtractedRule.h  Hole.h  HoleCollection.h  PhraseAlignment.cpp  PhraseAlignment.h  RuleExtractionOptions.h  ScoreFeature.h  SentenceAlignmentWithSyntax.cpp  SentenceAlignmentWithSyntax.h  consolidate-direct.vcxproj  consolidate.vcxproj  domain.cpp  extract-lex-main.cpp  extract-lex.h  extract-lex.vcxproj  extract-rules-main.cpp  extract-rules.vcxproj  extract.vcxproj  score-main.cpp  score.h  score.vcxproj  srl-model-estimate.cpp  srlbridge.cpp  srlbridge.h  tables-core.cpp  tables-core.h
phrase-extract/lexical-reordering/: reordering_classes.cpp
scripts/training/: mert-moses_chart.pl
search/: CMakeLists.txt  applied.hh  nbest.cc  nbest.hh  vertex.cc  vertex_generator.hh
srl/: CMakeLists.txt
srl/cindex/: CMakeLists.txt  cexpansion.cpp  indexer.cpp  invdoc.cpp  invdoc.hpp  query.cpp  t-table.cpp  t-table.h
srl/libsrl/: CMakeLists.txt  argtable.cpp  argtable.h  defs.h  formatters.cpp  formatters.h  parsers.cpp  parsers.h  predtable.cpp  predtable.h  readers.cpp  readers.h  srl.cpp  srl.h  srlfeat.cpp  srlfeat.h  srlio.h  writers.cpp  writers.h
srl/scripts/: CMakeLists.txt  FilterSRLRules.py  UniqSRLRules.py
srl/srlextract/: CMakeLists.txt  aligninfo.cc  aligninfo.h  monoextract.cpp  rescore-nbest-srl.cpp  ruleextract.cc  ruleextract.h  srlextract.cpp  srlfeatscore.cpp  srlinfo.cc  srlinfo.h  srlinfoparser.cc  srlinfoparser.h  srlmodel.cpp  srlmodel.h  srlruleset.cc  srlruleset.h
srl/utils/: CMakeLists.txt  IOUtils.cxx  IOUtils.h  Params.cxx  Params.h  SimpleLogger.cxx  SimpleLogger.h  hdict.h  porter_stemmer.c  porter_stemmer.h  stringalgo.hh
util/: CMakeLists.txt  bit_packing.hh  exception.hh  file.cc  file_piece_test.cc  probing_hash_table_test.cc
vccomp/: CMakeLists.txt  getopt.c  getopt.h
w32/.svn/: all-wcprops  entries
