# Set output directory
FIND_PACKAGE(ZLIB)


SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET(LIBVCCOMP_SRC getopt.c getopt.h)


ADD_LIBRARY(vccomp STATIC ${LIBVCCOMP_SRC})
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )


#set properties on the libraries
SET_TARGET_PROPERTIES(vccomp PROPERTIES
    VERSION ${MOSES_VERSION}
    COMPILE_DEFINITIONS_DEBUG _DEBUG
)

#MERT


INSTALL(TARGETS vccomp
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    )

